--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <app-map></app-map>
     <spot-editor latitude="[[latitude]]" longitude="[[longitude]]"></spot-editor>
     <paper-toast></paper-toast>
+<script type="text/javascript">
+  var _paq=_paq||[];_paq.push(["trackPageView"]),_paq.push(["enableLinkTracking"]),function(){var e="//piwik-vinyll.rhcloud.com/";_paq.push(["setTrackerUrl",e+"piwik.php"]),_paq.push(["setSiteId",1]);var a=document,p=a.createElement("script"),r=a.getElementsByTagName("script")[0];p.type="text/javascript",p.async=!0,p.defer=!0,p.src=e+"piwik.js",r.parentNode.insertBefore(p,r)}();
+</script>
+<noscript><p><img src="//piwik-vinyll.rhcloud.com/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
   </body>
 
   <script>
