--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Make the World your Workplace - Webnomad</title>
     <meta name="description" content="Find a internet cafe hotspot where to work next to where you are. Contribute to the open map of the best internet work places.">
 
-    <script src="https://npmcdn.com/kinto@1.2.0/dist/kinto-1.2.0.min.js"></script>
+    <script src="//cdn.rawgit.com/feathersjs/feathers-client/v1.0.0/dist/feathers.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
     <!-- <script src="js/routes.js"></script> -->
 
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
@@ -29,12 +30,7 @@
   </body>
 
   <script>
-    var serverURL = 'https://kinto.dev.mozaws.net/v1'
-    var db = new Kinto({
-      remote: serverURL,
-      headers: {Authorization: 'Basic ' + btoa('webnomad:webnomad')}
-    })
-    var Spots = db.collection('spots')
+    var serverURL = location.hash === '#local' ? 'localhost:3030' : '158.58.170.155:3030'
 
     window.addEventListener('WebComponentsReady', function(e) {
       var map = document.querySelector('app-map')
@@ -51,60 +47,48 @@
       }
 
       // User
-      // Listen for geolocation and update user
+      // Listen for geolocation or name change and update user
       map.addEventListener('location', function(event) {
         updateUser({location: event.detail})
       })
-
       editor.addEventListener('save', function(event) {
         updateUser({name: event.detail.author})
       })
 
       // Inject spots into map
+      var app = feathers()
+      app.configure(feathers.socketio(io(serverURL)))
+      var spots = app.service('spots')
 
-      // Editor listening
-      Spots.sync()
-      .then(function() {
-        return Spots.list()
-      })
-      .then(function(spots) {
-        map.spots = spots.data
-        editor.collection = spots.data
-      })
-      editor.addEventListener('invalid', function(event) {
-        alert.text = event.detail
-        alert.className = 'error'
+      function alertUser(type, message) {
+        alert.text = message
+        alert.className = type
         alert.show()
+      }
+
+      function loadSpots() {
+        spots.find().then(function(dbSpots) {
+          map.spots = dbSpots
+          editor.spots = dbSpots
+        })
+      }
+
+      // Page load spots
+      spots.find().then(function() {
+        loadSpots()
+      })
+      // Created spot, refresh display
+      spots.on('created', function() {
+        loadSpots()
+      });
+
+      editor.addEventListener('invalid', function(event) {
+        alertUser('error', event.detail)
       })
 
       editor.addEventListener('save', function(event) {
-        console.debug('creating', event.detail)
-        Spots.create(event.detail)
-        .then(function(res) {
-          var author = event.detail.author || 'webnomad'
-          return Spots.sync({
-            remote: serverURL,
-            headers: {Authorization: 'Basic ' + btoa('webnomad' + ':' + 'webnomad')}
-          })
-        })
-        .then(function() {
-          alert.className = 'success'
-          alert.text = 'Your work spot was saved!'
-          alert.show()
-        })
-        .catch(function(err) {
-          console.error(err);
-          alert.className = 'error'
-          alert.text = 'Please check the form'
-          alert.show()
-        })
-      })
-
-      editor.addEventListener('created', function(event) {
-        console.debug('created', event)
-        alert.text = event.detail
-        alert.className = 'success'
-        alert.show()
+        spots.create(event.detail)
+        alertUser('success', 'Your work spot was saved!')
       })
     })
 
